--- a/src/index.html
+++ b/src/index.html
@@ -123,7 +123,6 @@
         <div id="population-info" style="text-align: center; margin: 20px 0; padding: 15px; background: #f5f5f5; border-radius: 8px;"></div>
         <div class="population-tabs">
           <button class="population-tab" data-population-tab="heroes">Heroes</button>
-          <button class="population-tab" data-population-tab="villains">Villains</button>
           <button class="population-tab" data-population-tab="pets">Pets</button>
         </div>
         <div id="population-content"></div>
@@ -141,21 +140,6 @@
           <button class="productivity-tab" data-productivity-tab="pomodoro">PomodoroTower</button>
         </div>
         <div id="productivity-content"></div>
-      </section>
-
-      <section id="villain-section">
-        <h1>My Villains (0/20)</h1>
-        <div class="hero-controls" id="villain-controls">
-          <label><input type="checkbox" id="villain-favorite-check"> Favorites</label>
-          <input type="text" id="villain-search" list="villain-search-list" placeholder="Search villain">
-          <datalist id="villain-search-list"></datalist>
-          <button id="villain-sort-name-btn" class="btn btn-green">Order by Name</button>
-          <button id="villain-sort-floor-btn" class="btn btn-green">Order by Floor</button>
-          <select id="villain-origin-filter"></select>
-          <button id="villain-remove-filter-btn" class="btn btn-green" style="display:none;">-&gt; RemoveFilter</button>
-        </div>
-        <div id="villains"></div>
-        <div id="villain-pagination" class="pagination"></div>
       </section>
 
       <section id="pets-section" style="display:none;">
@@ -205,7 +189,7 @@ Houses: Increase max Heroes (1 Hero per House).
 
 Pet Sanctuary: Increases max Pets.
 
-Tower: Increases max Villains you can hold.
+Tower: Village defense structure.
 
 Food/Wood/Stone Storage: Raise caps for Food, Wood, Stone.
 
@@ -277,7 +261,7 @@ Use Village Chief and Partner abilities to repel intruders and earn Gold.
 6 Heroes fight a giant monster that gets stronger after each defeat.
 
 4.3 Enemy Encounters
-Capture-style minigame that adds Villains to the village.
+Capture-style minigame for hero XP and rewards.
 
 4.4 Pet Exploration
 Each Pet can collect Gold once per day with the Village Chief and Partner.
